# toaruwm

./: .gitignore  COMPLIANCE  COMPLIANCE.md  Cargo.toml  README.md  TESTING.md  notes  notes.txt
src/: bindings.rs  keybinds.rs  lib.rs  log.rs  main.rs  util.rs
src/core/: desktop.rs  mod.rs  ring.rs  types.rs  window.rs  workspace.rs
src/layouts/: dtiled.rs  floating.rs  mod.rs  tiled.rs  update.rs
src/manager/: config.rs  event.rs  hooks.rs  mod.rs  state.rs
src/widget/: mod.rs
src/x/: atom.rs  core.rs  cursor.rs  dummy.rs  event.rs  ewmh.rs  icccm.rs  input.rs  mod.rs  property.rs  tests.rs
src/x/x11rb/: convert.rs  mod.rs  tests.rs  xconn.rs
src/x/xcb/: convert.rs  cursor.rs  impl_xconn.rs  mod.rs  tests.rs  util.rs  xconn.rs
toaru-macro/: Cargo.toml
toaru-macro/src/: lib.rs
toarulib/: Cargo.toml
toaruwm/: Cargo.toml
toaruwm-bin/: Cargo.toml
toaruwm-bin/src/: main.rs
toaruwm/src/: bindings.rs  lib.rs  log.rs
toaruwm/src/backend/: mod.rs
toaruwm/src/backend/wayland/: mod.rs
toaruwm/src/backend/wayland/backend/: drm.rs  mod.rs
toaruwm/src/backend/wayland/handlers/: compositor.rs
toaruwm/src/backend/x/: atom.rs  core.rs  dummy.rs  event.rs  input.rs  mod.rs  property.rs  traits.rs  types.rs
toaruwm/src/backend/x/x11rb/: convert.rs  xconn.rs
toaruwm/src/backend/x/xcb/: convert.rs  xconn.rs
toaruwm/src/config/: config.rs  mod.rs  output.rs  rules.rs  runtime.rs  section.rs
toaruwm/src/core/: desktop.rs  mod.rs  ring.rs  types.rs  window.rs  workspace.rs
toaruwm/src/core/types/: geometry.rs  mod.rs
toaruwm/src/layouts/: floating.rs  mod.rs  tiled.rs  update.rs
toaruwm/src/manager/: config.rs  event.rs  hooks.rs  manager.rs  mod.rs  output.rs  state.rs
toaruwm/src/platform/: mod.rs  output.rs
toaruwm/src/platform/wayland/: config.rs  convert.rs  macros.rs  mod.rs  output.rs  state.rs  wayland.rs
toaruwm/src/platform/wayland/backend/: drm.rs  mod.rs  winit.rs
toaruwm/src/platform/wayland/handlers/: compositor.rs  layer.rs  mod.rs  state.rs  xdg.rs
toaruwm/src/platform/wayland/input/: focus.rs  handler.rs  mod.rs
toaruwm/src/platform/wayland/render/: macros.rs  mod.rs
toaruwm/src/platform/wayland/util/: id.rs  mod.rs
toaruwm/src/platform/wayland/window/: mapped.rs  mod.rs  unmapped.rs
toaruwm/src/platform/x/: atom.rs  core.rs  cursor.rs  dummy.rs  mod.rs  property.rs  traits.rs  types.rs
toaruwm/src/platform/x/x11rb/: convert.rs  mod.rs  xconn.rs
toaruwm/src/platform/x/xcb/: convert.rs  mod.rs  xconn.rs
toaruwm/src/platform/x11/: config.rs  core.rs  dummy.rs  event.rs  mod.rs  property.rs  traits.rs  types.rs
toaruwm/src/platform/x11/x11rb/: convert.rs  mod.rs  xconn.rs
toaruwm/src/platform/x11/xcb/: convert.rs  mod.rs  xconn.rs
toaruwm/src/toarulib/: mod.rs
toaruwm/src/toarulib/bars/: mod.rs
toaruwm/src/toarulib/bars/widget/: mod.rs
toaruwm/src/toarulib/decoration/: config.rs  mod.rs
toaruwm/src/util/: log.rs  mod.rs  spawn.rs  watcher.rs
toaruwm/src/wayland/: convert.rs  mod.rs  wayland.rs
toaruwm/src/wayland/backend/: drm.rs  mod.rs  winit.rs
toaruwm/src/wayland/handlers/: compositor.rs  layer.rs  mod.rs  state.rs  xdg.rs
toaruwm/src/wayland/input/: focus.rs  handler.rs
toaruwm/src/wayland/render/: mod.rs
toaruwm/src/wayland/window/: mod.rs
toaruwm/src/x/: core.rs  input.rs  mod.rs  property.rs  traits.rs
toaruwm/src/x/x11rb/: convert.rs  mod.rs  xconn.rs
toaruwm/src/x/xcb/: convert.rs  mod.rs  util.rs  xconn.rs
x11-calloop/: Cargo.toml
x11-calloop/src/: lib.rs
