[package]
name = "toaruwm"
version = "0.1.0"
authors = ["cartoon-raccoon <shaughn.chan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "toaruwm"
path = "src/lib.rs"

[[bin]]
name = "toaruwm"
path = "src/bin/bin.rs"

[dependencies]
xcb = {version = "0.9.0", features = ["randr"]}
xcb-util = {version = "0.3", features = ["keysyms", "cursor", "ewmh", "icccm"]}
x11 = "2.18"

log = "0.4"
flexi_logger = "0.17"

strum = { version = "0.19.2", features = ["derive"] }
strum_macros = "0.19.2"

bitflags = "1.2.1"

nix = "0.20"

thiserror = "1"