[package]
name = "toaruwm-bin"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "toaruwm"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toaruwm = { path = "../../toaruwm" }
toarulib = { path = "../../toarulib" }
