[package]
name = "toaruwm-bin"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "toaruwm-bin"
path = "src/main.rs"

[dependencies]
toaruwm = { path = "../toaruwm" }

tracing = {version = "0.1", features = ["attributes", "log"] }
tracing-subscriber = {version = "0.3", features = ["ansi", "std", "fmt"]}
