[package]
name = "toaruwm"
version = "0.1.0"
authors = ["cartoon-raccoon <shaughn.chan@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "toaruwm"
path = "src/lib.rs"

[dependencies]
xcb = { version = "1.2", features = ["randr", "xkb"] }
x11 = "2.21"
x11rb = { git = "https://github.com/cartoon-raccoon/x11rb.git", features = ["cursor", "randr", "xkb"] }

smithay = { version = "0.6", features = [
    "wayland_frontend", 
    "backend_drm", 
    "backend_libinput", 
    "backend_udev", 
    "backend_session"] }

input = "0.9"

log = "0.4"
tracing = {version = "0.1", features = ["attributes", "log"] }

strum = { version = "0.19.2", features = ["derive"] }
strum_macros = "0.19.2"

custom_debug_derive = "0.6.1"

bitflags = "2.5.0"
byteorder = "1.4.3"

nix = "0.20"

thiserror = "1"