[package]
name = "toaruwm"
version = "0.1.0"
authors = ["cartoon-raccoon <shaughn.chan@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "toaruwm"
path = "src/lib.rs"

[dependencies]
xcb = { version = "1.2", features = ["randr", "xkb"] }
x11 = "2.21"

smithay-drm-extras = "0.1.0"
glam = "0.30.4"

input = "0.9"

log = "0.4"
tracing = {version = "0.1", features = ["attributes", "log"] }

strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.1"

custom_debug_derive = "0.6.1"

bitflags = "2.5.0"
byteorder = "1.4.3"

indexmap = {version = "2.10", features = ["std"]}

rustix = "1.0.5"
nix = "0.20"
libc = "0.2.172"

thiserror = "1"

toaru-macro = { path = "../toaru-macro" }

serde = { version = "1.0", optional = true }

[dependencies.smithay]
version = "0.7"
features = [
    "wayland_frontend", 
    "backend_drm", 
    "backend_egl",
    "backend_libinput", 
    "backend_udev", 
    "backend_session",
    "desktop",
    "use_system_lib", 
    "xwayland"]

[dependencies.x11rb]
git = "https://github.com/cartoon-raccoon/x11rb.git"
features = ["cursor", "randr", "xkb"]

[dev-dependencies]
test-log = { version = "0.2", features = ["trace"] }


[features]
default = ["wayland-full", "x11-full", "serde"]
wayland-full = ["xwayland"]
x11-full = ["x11-core"]
xwayland = ["wayland-core"]
x11-core = []
wayland-core = []
systemd = []